# dadosgovbr-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.circleci/: config.yml
helpers/: __init__.py  formatter.py  http.py  parser.py
tests/: __init__.py  test_federal.py  test_helpers.py  test_sp.py
tools/: __init__.py  federal.py  sp.py
